# adanaxis

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  COPYING  ChangeLog  INSTALL  LICENCE  MakeRelease.sh  Makefile.am  Makefile.in  NEWS  README  README.linux  README.linux.md  README.macosx  README.md  README.win32  SourceConditioner.pl  SourceProcess.pm  autogen.pl  autogen.sh  config.h.in  configure  configure.in  ic2  ic2.Makefile.am  ic2.configure.in  ic2.spec.in  ic2.spec.mdk.in  ic2.spec.redhat.in  ic2.spec.suse.in  lib.Makefile.am  ltmain.sh  meshmover  mushcore.configure.in  mushmesh.configure.in  mustl.configure.in  prebuild.sh
VisualC/: VisualC.dsw  core_app.bat  mushcore.dsp  mustl.dsp  testmushcore.dsp  testmustl.dsp
VisualC/core_app/: core_app.dsp  core_app.dsw  core_app.ncb  core_app.opt  core_app.plg
VisualC/project/: adanaxis.rc  adanaxis.vcproj  adanaxis.vcxproj  adanaxis.vcxproj.filters  project.aps  project.rc  project.sln  project.vcproj  tesseracttrainer.rc  tesseracttrainer.vcproj  tesseracttrainer.vcxproj  tesseracttrainer.vcxproj.filters
VisualC/ruby/: ruby.vcproj  stdafx.cpp
VisualStudio/adanaxis/: Adanaxis.props  Adanaxis.wxs  COPYING.rtf  GetWindowsDeps.ps1  SecretCodeSigningKey.pfx  SectigoRSACodeSigningCA.cer  adanaxis.rc  adanaxis.sln  adanaxis.vcxproj  adanaxis.vcxproj.filters  build.ps1  build_installer.ps1  build_travis.bat  build_travis.ps1  get_adanaxis_deps.ps1  install_wix.ps1  resource.h
VisualStudio/adanaxis-wixsetup/: Adanaxis.wxs  adanaxis-wixsetup.wixproj
VisualStudio/mushruby/: MushRuby.props  mushruby.vcxproj  mushruby.vcxproj.filters
VisualStudio/ruby/: ruby.vcxproj
avarisse/script/: test1.ava
contractor/: MakeRelease.sh
contractor/pixels/: wall1.tiff
contractor/spaces/: gamemap.xml  tilemap.xml
contractor/system/: start.txt
core-app.pbproj/: project.pbxproj  southa.pbxuser
debian/: docs  postinst  postrm  preinst  prerm
doc/: Doxyfile.txt  MakeDocs.rb  Mesh_cap_connectivity_1.vsd  Mesh_pipe_meets_end_subdivide.vsd  Mesh_stitching_cap_3.vsd  mesh_cap_control_copying_1.vsd  mesh_cap_pass_1.vsd  mesh_connection.doc  mesh_pipe_meets_end.vsd  mesh_pipe_meets_end_candidates.vsd  mesh_pipe_meets_end_final.vsd  mesh_pipe_meets_end_first_pass.vsd  mesh_pipe_meets_end_initial.vsd  mesh_pipe_meets_end_patch_cap.vsd  mesh_pipe_meets_end_patch_pipe.vsd  mesh_pipe_meets_end_patching.vsd  mesh_pipe_meets_end_second_pass.vsd  mesh_pipe_meets_end_subdivide_corrected.vsd  mesh_pipe_meets_end_subdivide_simple.vsd  mesh_stitching_cap_1.vsd  mesh_stitching_cap_2.vsd  mesh_stitching_iso_1.vsd
doc/resources/: artbeats-possibles.sxw
doc/schedule/: schedule-2003-11-14.vsd
game/: Contract.xml  GameMap.xml  GameWebCommands.cpp  GameWebCommands.h  TileMap.xml  gra1.tiff
game/images/: floor1-x2.tiff  floor1.tiff  wall1-x2.tiff
game/patterns/: innerwall.pat
macosx/: IC2-macosx-setup.post  License.html  MakeInstaller.sh  MakeRelease.sh  Mushware web site.url  Mushware web site.webloc.cpgz  Start_in_Recovery_Mode.scpt  UpdateCheck.url  Welcome.html  adanaxis_app.icns  contract-append.xml  ic2_app.icns  package-spec.pmsp  tesseracttrainer_app.icns  uDevGame Readme.txt
macosx/include/: pcre.h
macosx/project/: Adanaxis-Info.plist  Maurheen-Info.plist  MushMesh-Info.plist  MushPie-Info.plist  MushRuby-Info.plist  Mushcore-Info.plist  Mustl-Info.plist  TesseractTrainer.plist  TestMushPie-Info.plist  TestMushcore-Info.plist  TestMustl-Info.plist  all.Info.plist  dummp-Info.plist  seg1_addresses.txt
macosx/resources/: IC2-macosx-setup-0_0_1.post_install  IC2-macosx-setup-0_0_1.post_upgrade
maurheen/system/: start.txt
oldsrc/: MushcoreChildRecord.cpp  MushcoreChildRecord.h
riscos/: BasText.txt  basicToC.pl
scripts/: AmendToType.rb  COBHandler.pm  COBTranslate.pl  FileMush.rb  GetWindowsDeps.ps1  ImageProcess.rb  MakeDemo.rb  MushObject.rb  ProcessAdanaxisIntern.rb  ProcessAnimation.rb  ProcessCosmos.rb  ProcessIntern.rb  ProcessMush.rb  SourceProcess.rb
src/: GameTypeRace.cpp  GameTypeRace.h  MakeMakefile.sh  Makefile.in  SourceConditioner.pl  SourceMove.pl
src/API/: mushAppPrefix.h  mushCore.h  mushCore.hp  mushGL.h  mushGL.hp  mushGame.h  mushMedia.h  mushModel.h  mushMushCollision.h  mushMushFile.h  mushMushGL.h  mushMushGame.h  mushMushMesh.h  mushMushMeshLibrary.h  mushMushMeshRuby.h  mushMushPie.h  mushMushRender.h  mushMushRuby.h  mushMushSkin.h  mushMushcore.h  mushMushcoreIO.h  mushMushcoreSTL.h  mushMustl.h  mushMustlGame.h  mushPie.h  mushPlatform.h  mustlCore.h
src/Adanaxis/: AdanaxisAppHandler.cpp  AdanaxisAppHandler.h  AdanaxisClient.cpp  AdanaxisClient.h  AdanaxisCommandHandler.cpp  AdanaxisCommandHandler.h  AdanaxisConfig.cpp  AdanaxisConfig.h  AdanaxisData.cpp  AdanaxisData.h  AdanaxisEvents.cpp  AdanaxisEvents.h  AdanaxisGame.cpp  AdanaxisGame.h  AdanaxisInfo.cpp  AdanaxisInfo.h  AdanaxisIntern.cpp  AdanaxisIntern.h  AdanaxisLogic.cpp  AdanaxisLogic.h  AdanaxisMeshLibrary.cpp  AdanaxisMeshLibrary.h  AdanaxisPiece.cpp  AdanaxisPiece.h  AdanaxisPieceDeco.cpp  AdanaxisPieceDeco.h  AdanaxisPieceEffector.cpp  AdanaxisPieceEffector.h  (+40 more)
src/GL/: GLSTL.h  (+82 more)
targets/: adanaxis.ChangeLog  adanaxis.debian.changelog  adanaxis.debian.control  adanaxis.debian.copyright  adanaxis.debian.menu  adanaxis.debian.rules  adanaxis.debian.watch  adanaxis.def  adanaxis.spec.fedora  adanaxis.spec.generic  adanaxis.spec.mdk  app.AUTHORS  app.COPYING  app.INSTALL  app.Makefile.am  app.README  app.acinclude.m4  app.prebuild.sh  commercial.COPYING  empty.MushSecretKeys.cpp  empty.prebuild.sh  macosx.old.MakeRelease.sh  mushcore.def  mushmesh.def  mushpiece.def  sdl_app.configure.in  sdl_app.spec  sdl_app.spec.mdk  snapshot.def  tesseracttrainer.ChangeLog  tesseracttrainer.Makefile.am  tesseracttrainer.def  win32.installer.nsi
test/: XMLtest.xml  test.spr  test1.txt
win32/: FileListToNSI.rb  LICENCE  MakeInstaller.sh  Mushware web site.url  SignExe.rb  UpdateCheck.url  installer.nsi
x11/: DebianBuildAll.rb  DebianInit.rb  DpkgGenericBuildAll.rb  GenericBuildAll.rb  MandrivaBuildAll.rb  MandrivaInit.rb  RPMGenericBuildAll.rb
(+1379 files in other folders)
