# -*-makefile-*-
##############################################################################
#
# This file contains original work by Andy Southgate.  Contact details can be
# found at http://www.mushware.com/.  This file was placed in the Public
# Domain by Andy Southgate and Mushware Limited in 2003.
#
# This software carries NO WARRANTY of any kind.
#
##############################################################################

#
# $Id$
# $Log$
#

AUTOMAKE_OPTIONS=1.6
SUBDIRS = @TOP_SUBDIRS@
DIST_SUBDIRS = @TOP_SUBDIRS@
EXTRA_DIST=@EXTRA_DIST@
