# -*-makefile-*-
##############################################################################
#
# This file contains original work by Andy Southgate.  Contact details can be
# found at http://www.mushware.com/.  This file was placed in the Public
# Domain by Andy Southgate and Mushware Limited in 2003.
#
# This software carries NO WARRANTY of any kind.
#
##############################################################################

#
# $Id: lib.Makefile.am,v 1.2 2003/01/13 23:48:38 southa Exp $
# $Log: lib.Makefile.am,v $
# Revision 1.2  2003/01/13 23:48:38  southa
# Mustl fixes
#
# Revision 1.1  2003/01/11 17:12:09  southa
# Created
#
#

AUTOMAKE_OPTIONS=1.6
SUBDIRS = @TOP_SUBDIRS@
DIST_SUBDIRS = @TOP_SUBDIRS@
EXTRA_DIST=  test/mustl/config.mhtml  test/mustl/home.mhtml  test/mustl/networkconfig.mhtml  test/mustl/networkstatus.mhtml  test/mustl/quit.mhtml  test/mustl/index.html  test/mustl/networkframe.html  test/mustl/title.html  test/mustl/style.css
